--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -16,7 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="../css/dashboard.css" rel="stylesheet">
 
 
 </head>
@@ -32,12 +32,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.view.html">Form Maker</a>
+            <a class="navbar-brand" href="../views/home/home.view.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="profile.view.html">Username</a></li>
-                <li><a href="../index.html">Logout</a></li>
+                <li><a href="../../index.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -50,10 +50,10 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="../views/home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.view.html">Profile</a></li>
-                <li><a href="admin.view.html">Admin</a></li>
-                <li><a href="forms.view.html">Forms</a></li>
+                <li><a href="../views/admin/admin.view.html">Admin</a></li>
+                <li><a href="../views/forms/forms.view.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
