--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>login</title>
-</head>
-<body>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,13 +10,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Login</title>
+    <title>Register</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="../css/dashboard.css" rel="stylesheet">
 
 
 </head>
@@ -39,14 +32,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.view.html">Form Maker</a>
+            <a class="navbar-brand" href="../views/home/home.view.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.view.html">Register</a></li>
                 <li><a href="login.view.html">Login</a></li>
                 <li><a href="#">Username</a></li>
-                <li><a href="../index.html">Logout</a></li>
+                <li><a href="../../index.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -59,15 +52,15 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="../views/home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.view.html">Profile</a></li>
-                <li><a href="admin.view.html">Admin</a></li>
-                <li><a href="forms.view.html">Forms</a></li>
+                <li><a href="../views/admin/admin.view.html">Admin</a></li>
+                <li><a href="../views/forms/forms.view.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-            <h1>Login</h1>
+            <h1>Register</h1>
 
             <form class="form-horizontal">
                 <div class="form-group">
@@ -83,8 +76,20 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="verify-password" class="col-sm-2 control-label">Verify Password:</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="verify-password" placeholder="Verify Password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email" class="col-sm-2 control-label">Email:</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.view.html" class="btn btn-default" role="button">Login</a>
+                        <a href="profile.view.html" class="btn btn-success" role="button">Register</a>
                     </div>
                 </div>
             </form>
@@ -97,11 +102,8 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-</body>
-</html>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </body>
 </html>
