--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -5,18 +5,18 @@
     <div class="form-group">
         <label for="user-name" class="col-sm-2 control-label">Username:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="user-name" placeholder="Username">
+            <input ng-model="user.username" type="text" class="form-control" id="user-name" placeholder="Username">
         </div>
     </div>
     <div class="form-group">
         <label for="password" class="col-sm-2 control-label">Password:</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input ng-model="user.password" type="password" class="form-control" id="password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a href="profile.view.html" class="btn btn-default" role="button">Login</a>
+            <button ng-click="login()" class="btn btn-default" role="button">Login</button>
         </div>
     </div>
 </form>
