--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -4,37 +4,37 @@
     <div class="form-group">
         <label for="user-name" class="col-sm-2 control-label">Username:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="user-name" placeholder="Username">
+            <input ng-model="user.name" type="text" class="form-control" id="user-name" placeholder="Username">
         </div>
     </div>
     <div class="form-group">
         <label for="password" class="col-sm-2 control-label">Password:</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input ng-model="user.password" type="password" class="form-control" id="password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
         <label for="fName" class="col-sm-2 control-label">First Name:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="fName" placeholder="First Name">
+            <input ng-model="user.firstName" type="text" class="form-control" id="fName" placeholder="First Name">
         </div>
     </div>
     <div class="form-group">
         <label for="lName" class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="lName" placeholder="Last Name">
+            <input ng-model="user.lastName" type="text" class="form-control" id="lName" placeholder="Last Name">
         </div>
     </div>
 
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">Email:</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input ng-model="user.email" type="email" class="form-control" id="email" placeholder="Email">
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a href="profile.view.html" class="btn btn-success" role="button">Update</a>
+            <button ng-click="update()" class="btn btn-success" role="button">Update</button>
         </div>
     </div>
 </form>
