--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -5,30 +5,30 @@
     <div class="form-group">
         <label for="user-name" class="col-sm-2 control-label">Username:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="user-name" placeholder="Username">
+            <input ng-model="user.username" type="text" class="form-control" id="user-name" placeholder="Username">
         </div>
     </div>
     <div class="form-group">
         <label for="password" class="col-sm-2 control-label">Password:</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input ng-model="user.password" type="password" class="form-control" id="password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
         <label for="verify-password" class="col-sm-2 control-label">Verify Password:</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="verify-password" placeholder="Verify Password">
+            <input ng-model="user.verifyPassword" type="password" class="form-control" id="verify-password" placeholder="Verify Password">
         </div>
     </div>
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">Email:</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input ng-model="user.email" type="email" class="form-control" id="email" placeholder="Email">
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a href="profile.view.html" class="btn btn-success" role="button">Register</a>
+            <button ng-click="register(user)" class="btn btn-success" role="button">Register</button>
         </div>
     </div>
 </form>
