--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button ng-click="login()" class="btn btn-default" role="button">Login</button>
+            <button ng-click="login(user)" class="btn btn-default" role="button">Login</button>
         </div>
     </div>
 </form>
