--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -14,47 +14,25 @@
         </thead>
         <tbody>
             <tr>
-                <td><input type="text" class="form-control" placeholder="name"></td>
+                <td><input ng-model="newForm.title" type="text" class="form-control" placeholder="title"></td>
                 <td>
-                    <a href="#" class="btn btn-primary" role="button">
+                    <button ng-click="addForm(newForm) " class="btn btn-primary" role="button">
                         <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </a>
-                    <a href="#" class="btn btn-success" role="button">
+                    </button>
+                    <button ng-click="updateForm()" class="btn btn-success" role="button">
                         <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
-                    </a>
+                    </button>
                 </td>
             </tr>
-            <tr>
-                <td>Registration Form</td>
+            <tr ng-repeat="form in currentUserForms">
+                <td>{{form.title}}</td>
                 <td>
-                    <a href="#" class="btn btn-danger" role="button">
+                    <button ng-click="deleteForm()" class="btn btn-danger" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="#" class="btn btn-warning" role="button">
+                    </button>
+                    <button ng-click="selectForm()" class="btn btn-warning" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>Contact List</td>
-                <td>
-                    <a href="#" class="btn btn-danger" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="#" class="btn btn-warning" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>To Do List</td>
-                <td>
-                    <a href="#" class="btn btn-danger" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="#" class="btn btn-warning" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
+                    </button>
                 </td>
             </tr>
         </tbody>
