--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -27,10 +27,10 @@
             <tr ng-repeat="form in currentUserForms">
                 <td>{{form.title}}</td>
                 <td>
-                    <button ng-click="deleteForm()" class="btn btn-danger" role="button">
+                    <button ng-click="deleteForm($index)" class="btn btn-danger" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </button>
-                    <button ng-click="selectForm()" class="btn btn-warning" role="button">
+                    <button ng-click="selectForm($index)" class="btn btn-warning" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </button>
                 </td>
