Added updateForm() in forms.controller.js

--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -19,7 +19,7 @@
                     <button ng-click="addForm(newForm) " class="btn btn-primary" role="button">
                         <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
                     </button>
-                    <button ng-click="updateForm()" class="btn btn-success" role="button">
+                    <button ng-click="updateForm(newForm)" class="btn btn-success" role="button">
                         <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
                     </button>
                 </td>
