--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,8 +1,8 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="#/home">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#/profile">Profile</a></li>
-        <li><a href="#/admin">Admin</a></li>
-        <li><a href="#/forms">Forms</a></li>
+        <li ng-class="{active: $location.url() == '/home' }"><a href="#/home">Home <span class="sr-only">(current)</span></a></li>
+        <li ng-class="{active: $location.url() == '/profile' }"><a ng-show="currentUser" href="#/profile">Profile</a></li>
+        <li ng-class="{active: $location.url() == '/forms' }"><a ng-show="currentUser" href="#/forms">Forms</a></li>
+        <li ng-class="{active: $location.url() == '/admin' }"><a ng-show="currentUser && currentUser.roles.indexOf('admin') >= 0" href="#/admin">Admin</a></li>
     </ul>
 </div>
