--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -14,7 +14,7 @@
                 <li><a ng-hide="currentUser" href="#/register">Register</a></li>
                 <li><a ng-hide="currentUser" href="#/login">Login</a></li>
                 <li><a ng-show="currentUser" href="#/profile">{{currentUser.username}}</a></li>
-                <li><a ng-show="currentUser && currentUser.roles.indexOf('admin') >= 0" href="#/admin">Admin</a></li>
+                <li><a ng-show="currentUser.roles.indexOf('admin') >= 0" href="#/admin">Admin</a></li>
                 <li><a ng-show="currentUser" ng-click="logout()" href="#/home">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
