added content in main.control.js

--- a/public/project/views/main/main.view.html
+++ b/public/project/views/main/main.view.html
@@ -3,7 +3,7 @@
         <ul class="list-inline">
             <li><label>I'm looking for:</label><input class="form-control" placeholder="Primary Care Doctor"></li>
             <li><label>In:</label><input class="form-control" placeholder="Zip Code/City/State"></li>
-            <li><a class="btn btn-default" href="views/search/result.view.html">Search</a></li>
+            <li><a class="btn btn-default" ng-click="main.search()">Search</a></li>
         </ul>
     </div>
 </div>
