--- a/public/project/views/search/result.view.html
+++ b/public/project/views/search/result.view.html
@@ -10,7 +10,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="doctor in result.doctors">
-        <td>{{doctor.profile.first_name}} {{doctor.profile.last_name}}<br>
+        <td><a href="#/detail/{{doctor.uid}}">{{doctor.profile.first_name}} {{doctor.profile.last_name}}</a><br>
             <img ng-src="{{doctor.ratings[0].image_url_small}}">
         </td>
         <td>{{doctor.profile.title}}</td>
