--- a/public/project/views/main/main.view.html
+++ b/public/project/views/main/main.view.html
@@ -1,12 +1,25 @@
 <div class="row">
-    <div class="col-lg-12 text-center">
-        <ul class="list-inline">
-            <li><label>I'm looking for:</label><input class="form-control" placeholder="Primary Care Doctor"></li>
-            <li><label>In:</label><input class="form-control" placeholder="Zip Code/City/State"></li>
-            <li><a class="btn btn-default" ng-click="main.search()">Search</a></li>
-        </ul>
+    <div class="btn-group col-md-6 col-md-offset-3">
+        <div class="btn-group">
+            <input ng-model="specialty" class="btn btn-default dropdown-toggle" data-toggle="dropdown" placeholder="Primary Care Doctor">
+            <ul class="dropdown-menu">
+                <li><a href="#">Carediologiest</a></li>
+                <li><a href="#">OBGYN</a></li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <input ng-model="location" class="btn btn-default dropdown-toggle" data-toggle="dropdown" placeholder="Zip Code or City">
+            <ul class="dropdown-menu">
+                <li><a href="#">New York</a></li>
+                <li><a href="#">Boston</a></li>
+            </ul>
+        </div>
+        <a ng-click="main.search(specialty, location)" href="#/result/specialty/{{main.specialty}}/location/{{main.location}}" class="btn btn-primary">Search</a>
     </div>
 </div>
+
+
+
 
 
 
