--- a/public/project/views/header/header.view.html
+++ b/public/project/views/header/header.view.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav ng-controller="HeaderController as model" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -14,11 +14,17 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#">Login</a>
+                <li ng-hide="currentUser">
+                    <a href="#/login">Login</a>
                 </li>
-                <li>
-                    <a href="#">Join</a>
+                <li ng-hide="currentUser">
+                    <a href="#/register">Join</a>
+                </li>
+                <li ng-show="currentUser">
+                    <a href="#/profile">{{currentUser.username}}</a>
+                </li>
+                <li ng-show="currentUser">
+                    <a ng-click="model.logout()" href="#/">Logout</a>
                 </li>
             </ul>
         </div>
