--- a/public/project/views/search/detail.view.html
+++ b/public/project/views/search/detail.view.html
@@ -7,14 +7,14 @@
                 <li>{{detail.data.data.profile.first_name}} &nbsp {{detail.data.data.profile.last_name}}</li>
                 <li>{{detail.data.data.specialties[0].name}}</li>
                 <li><img ng-src="{{detail.data.data.ratings[0].image_url_small}}"></li>
-                <li>&nbsp;</li>
+                <li>{{detail.data.data.uid}}</li>
                 <li>{{detail.data.data.practices[0].name}}</li>
                 <li>{{detail.data.data.practices[0].phones[0].number}}</li>
             </ul>
         </div>
     </div>
     <div class="col-md-2">
-        <p><button class="btn btn-default btn-block">Rate</button></p>
+        <p><a class="btn btn-default btn-block" role="button" href="#/rate/{{detail.data.data.uid}}">Rate</a></p>
         <p><button class="btn btn-default btn-block">Favorite</button></p>
     </div>
 </div>
