--- a/public/project/views/users/profile.view.html
+++ b/public/project/views/users/profile.view.html
@@ -1,1 +1,34 @@
-<h1>Profile</h1>
+<div class="row">
+    <div class="col-md-2">
+        <ul class="nav nav-pills nav-stacked">
+            <li role="presentation" class="active"><a href="#">Profile</a></li>
+            <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
+            <li role="presentation"><a href="#">My Reviews</a></li>
+            <li role="presentation"><a href="#">My Messages</a></li>
+        </ul>
+    </div>
+    <div class="col-md-6 col-md-offset-1">
+        <h1>Profile</h1>
+        <hr>
+        <div class="form-group">
+            <label for="email">Email Address:</label>
+            <input ng-model="user.email" class="form-control" type="text" id="email" placeholder="Emial">
+        </div>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input ng-model="user.username" class="form-control" type="text" id="username" placeholder="username">
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone:</label>
+            <input ng-model="user.phone" class="form-control" type="text" id="phone" placeholder="phone number">
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <a class="btn btn-success btn-block" ng-click="">Save</a>
+            </div>
+            <div class="col-md-3">
+                <a class="btn btn-default btn-block" ng-click="">Cancel</a>
+            </div>
+        </div>
+    </div>
+</div>
