--- a/public/project/views/favorites/favorite.view.html
+++ b/public/project/views/favorites/favorite.view.html
@@ -2,9 +2,9 @@
     <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
             <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
-            <li role="presentation"><a href="#">Favorite Doctors</a></li>
-            <li role="presentation"><a href="#">My Reviews</a></li>
-            <li role="presentation"><a href="#">My Messages</a></li>
+            <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
+            <li role="presentation"><a href="#/review">My Reviews</a></li>
+            <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
     <div class="col-md-8">
