--- a/public/project/views/rate/rate.view.html
+++ b/public/project/views/rate/rate.view.html
@@ -1,26 +1,22 @@
 <h2>Rate Doctor</h2>
 <div class="row">
     <div class="col-md-6 col-md-offset-2">
-        <div class="col-sm-3"><img class="img-circle" ng-src="{{detail.data.data.profile.image_url}}"></div>
+        <div class="col-sm-3"><img class="img-circle" ng-src="{{model.doctor.profile.image_url}}"></div>
         <div class="col-sm-9">
             <ul class="list-unstyled">
-                <li>{{detail.data.data.profile.first_name}} &nbsp {{detail.data.data.profile.last_name}}</li>
-                <li>{{detail.data.data.specialties[0].name}}</li>
-                <li><img ng-src="{{detail.data.data.ratings[0].image_url_small}}"></li>
-                <li>{{detail.data.data.uid}}</li>
-                <li>{{detail.data.data.practices[0].name}}</li>
-                <li>{{detail.data.data.practices[0].phones[0].number}}</li>
+                <li>{{model.doctor.profile.first_name}} &nbsp {{model.doctor.profile.last_name}}</li>
+                <li>{{model.doctor.specialties[0].name}}</li>
+                <li><img ng-src="{{model.doctor.ratings[0].image_url_small}}"></li>
+                <li>&nbsp;</li>
+                <li>{{model.doctor.practices[0].name}}</li>
+                <li>{{model.doctor.practices[0].phones[0].number}}</li>
             </ul>
         </div>
-    </div>
-    <div class="col-md-2">
-        <p><button class="btn btn-default btn-block">Rate</button></p>
-        <p><button class="btn btn-default btn-block">Favorite</button></p>
     </div>
 </div>
 <hr>
 <div class="row">
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-5 col-md-offset-1">
         <div class="form-group">
             <label for="overallRating">Overall Rating:</label>
             <select class="form-control" placeholder="rate" id="overallRating">
@@ -52,11 +48,19 @@
             </select>
         </div>
     </div>
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-5 ">
         <div class="form-group">
             <label for="comments">Comments:</label>
             <textarea class="form-control" rows="8" id="comments"></textarea>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3 col-md-offset-3">
+        <a class="btn btn-success btn-block" role="button">Submit</a>
+    </div>
+    <div class="col-md-3 ">
+        <a class="btn btn-warning btn-block" role="button">Cancel</a>
     </div>
 </div>
 
