--- a/public/project/views/users/profile.view.html
+++ b/public/project/views/users/profile.view.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" class="active"><a href="#">Profile</a></li>
+            <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
             <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
-            <li role="presentation"><a href="#">My Reviews</a></li>
-            <li role="presentation"><a href="#">My Messages</a></li>
+            <li role="presentation"><a href="#/review">My Reviews</a></li>
+            <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
     <div class="col-md-6 col-md-offset-1">
