--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">Form Maker</a>
+            <a class="navbar-brand" href="#/home">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -15,7 +15,7 @@
                 <li><a ng-hide="currentUser" href="#/login">Login</a></li>
                 <li><a ng-show="currentUser" href="#/profile">{{currentUser.username}}</a></li>
                 <li><a ng-show="currentUser.roles.indexOf('admin') >= 0" href="#/admin">Admin</a></li>
-                <li><a ng-show="currentUser" ng-click="logout()" href="#/">Logout</a></li>
+                <li><a ng-show="currentUser" ng-click="logout()" href="#/home">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
