--- a/public/project/views/search/detail.view.html
+++ b/public/project/views/search/detail.view.html
@@ -18,7 +18,7 @@
         <p><button ng-click="model.addFavorite()" class="btn btn-default btn-block">Favorite</button></p>
     </div>
 </div>
-<div ng-show="model.addSuccess" class="alert alert-success" role="alert">Added to my favorites!</div>
+<div ng-show="model.addSuccess" class="alert alert-success" role="alert"><p align="center">Added to my favorites!</p></div>
 <hr>
 <div class="row">
     <div class="col-md-5 col-md-offset-1">
