--- a/public/project/views/favorites/favorite.view.html
+++ b/public/project/views/favorites/favorite.view.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
-            <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
+            <li role="presentation"><a href="#/profile">Profile</a></li>
+            <li role="presentation"  class="active"><a href="#/favorite">Favorite Doctors</a></li>
             <li role="presentation"><a href="#/review">My Reviews</a></li>
             <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
