--- a/public/project/views/reviews/review.view.html
+++ b/public/project/views/reviews/review.view.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
+            <li role="presentation"><a href="#/profile">Profile</a></li>
             <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
-            <li role="presentation"><a href="#/review">My Reviews</a></li>
+            <li role="presentation" class="active"><a href="#/review">My Reviews</a></li>
             <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
@@ -18,31 +18,11 @@
             <th>&nbsp;</th>
             </thead>
             <tbody>
-            <tr>
-                <td>Dr.Smith</td>
-                <td>2016.3.1</td>
-                <td>4 stars</td>
-                <td>He is a good doctor</td>
-                <td>
-                    <button class="btn btn-warning" role="button">Edit</button>
-                    <button class="btn btn-danger" role="button">Delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Dr.Wisdom</td>
-                <td>2016.1.18</td>
-                <td>5 stars</td>
-                <td>Waiting time is too long!</td>
-                <td>
-                    <button class="btn btn-warning" role="button">Edit</button>
-                    <button class="btn btn-danger" role="button">Delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Dr.Lee</td>
-                <td>2016.1.1</td>
-                <td>3 stars</td>
-                <td>Not recommended</td>
+            <tr ng-repeat="review in model.reviews">
+                <td>{{review.doctorName}}</td>
+                <td>{{review.reviewDate | date}}</td>
+                <td>{{review.overall}}</td>
+                <td>{{review.comments}}</td>
                 <td>
                     <button class="btn btn-warning" role="button">Edit</button>
                     <button class="btn btn-danger" role="button">Delete</button>
