--- a/public/project/views/search/detail.view.html
+++ b/public/project/views/search/detail.view.html
@@ -1,15 +1,15 @@
 <h2>Doctor Details</h2>
 <div class="row">
     <div class="col-md-6 col-md-offset-2">
-        <div class="col-sm-3"><img class="img-circle" ng-src="{{model.data.data.profile.image_url}}"></div>
+        <div class="col-sm-3"><img class="img-circle" ng-src="{{model.data.profile.image_url}}"></div>
         <div class="col-sm-9">
             <ul class="list-unstyled">
-                <li>{{model.data.data.profile.first_name}} &nbsp {{model.data.data.profile.last_name}}</li>
-                <li>{{model.data.data.specialties[0].name}}</li>
-                <li><img ng-src="{{model.data.data.ratings[0].image_url_small}}"></li>
-                <li>{{model.data.data.uid}}</li>
-                <li>{{model.data.data.practices[0].name}}</li>
-                <li>{{model.data.data.practices[0].phones[0].number}}</li>
+                <li>{{model.data.profile.first_name}} &nbsp {{model.data.profile.last_name}}</li>
+                <li>{{model.data.specialties[0].name}}</li>
+                <li><img ng-src="{{model.data.ratings[0].image_url_small}}"></li>
+                <li>{{model.data.uid}}</li>
+                <li>{{model.data.practices[0].name}}</li>
+                <li>{{model.data.practices[0].phones[0].number}}</li>
             </ul>
         </div>
     </div>
@@ -24,7 +24,7 @@
     <div class="col-md-5 col-md-offset-1">
         <div class="col-md-5">Education</div>
         <div class="col-md-7">
-            <div ng-repeat="education in model.data.data.educations">
+            <div ng-repeat="education in model.data.educations">
                 <div>{{education.school}}</div>
             </div>
         </div>
@@ -35,7 +35,7 @@
     <div class="col-md-5 col-md-offset-1">
         <div class="col-md-5">Languages Spoken </div>
         <div class="col-md-7">
-            <div ng-repeat="language in model.data.data.profile.languages">
+            <div ng-repeat="language in model.data.profile.languages">
                 <div>{{language.name}}</div>
             </div>
         </div>
