fixed bugs in rate doctor and editReview

--- a/public/project/views/reviews/review.view.html
+++ b/public/project/views/reviews/review.view.html
@@ -19,7 +19,7 @@
             </thead>
             <tbody>
             <tr ng-repeat="review in model.reviews">
-                <td>Dr.{{review.doctorName}}</td>
+                <td>{{review.doctorName}}</td>
                 <td>{{review.reviewDate | date}}</td>
                 <td>{{review.overall}}</td>
                 <td>{{review.comments}}</td>
