modified sidebar, hide on small screens

--- a/public/project/views/users/profile.view.html
+++ b/public/project/views/users/profile.view.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">
+        <ul class="nav nav-pills nav-stacked hidden-xs hidden-sm">
             <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
             <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
             <li role="presentation"><a href="#/review">My Reviews</a></li>
