--- a/public/project/views/favorites/favorite.view.html
+++ b/public/project/views/favorites/favorite.view.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">
+        <ul class="nav nav-pills nav-stacked hidden-xs hidden-sm">
             <li role="presentation"><a href="#/profile">Profile</a></li>
             <li role="presentation"  class="active"><a href="#/favorite">Favorite Doctors</a></li>
             <li role="presentation"><a href="#/review">My Reviews</a></li>
             <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 table-responsive">
        <table class="table table-striped">
            <thead>
             <th>Photo</th>
