--- a/public/project/views/reviews/review.view.html
+++ b/public/project/views/reviews/review.view.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 hidden-xs hidden-sm">
         <ul class="nav nav-pills nav-stacked">
             <li role="presentation"><a href="#/profile">Profile</a></li>
             <li role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
@@ -7,8 +7,7 @@
             <li role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
-    <div class="col-md-8">
-        <h1>Reviews</h1>
+    <div class="table-responsive col-md-8">
         <table class="table table-striped">
             <thead>
             <th>To</th>
