--- a/public/project/views/search/result.view.html
+++ b/public/project/views/search/result.view.html
@@ -1,22 +1,23 @@
 <h2>Doctors Data</h2>
-<h3>{{result.doctorInfo}}</h3>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Title</th>
-        <th>Picture</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="doctor in result.doctors">
-        <td><a href="#/detail/{{doctor.uid}}">{{doctor.profile.first_name}} {{doctor.profile.last_name}}</a><br>
-            <img ng-src="{{doctor.ratings[0].image_url_small}}">
-        </td>
-        <td>{{doctor.profile.title}}</td>
-        <td><img ng-src="{{doctor.profile.image_url}}"></td>
-    </tr>
-    </tbody>
-</table>
-<!--{{testData.data[0].profile}}-->
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Title</th>
+            <th>Picture</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="doctor in result.doctors">
+            <td><a href="#/detail/{{doctor.uid}}">{{doctor.profile.first_name}} {{doctor.profile.last_name}}</a><br>
+                <img ng-src="{{doctor.ratings[0].image_url_small}}">
+            </td>
+            <td>{{doctor.profile.title}}</td>
+            <td><img ng-src="{{doctor.profile.image_url}}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 
