implement: protect profile page by checking with server to see if there is current user in req.session

--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -34,7 +34,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button ng-click="update()" class="btn btn-success" role="button">Update</button>
+            <button ng-click="model.update()" class="btn btn-success" role="button">Update</button>
         </div>
     </div>
 </form>
