refactored createform on both client and server side, introduced uuid

--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -14,17 +14,17 @@
         </thead>
         <tbody>
             <tr>
-                <td><input ng-model="newForm.title" type="text" class="form-control" placeholder="title"></td>
+                <td><input ng-model="model.newForm.title" type="text" class="form-control" placeholder="title"></td>
                 <td>
-                    <button ng-click="addForm(newForm) " class="btn btn-primary" role="button">
+                    <button ng-click="model.addForm(model.newForm) " class="btn btn-primary" role="button">
                         <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
                     </button>
-                    <button ng-click="updateForm(newForm)" class="btn btn-success" role="button">
+                    <button ng-click="updateForm(model.newForm)" class="btn btn-success" role="button">
                         <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
                     </button>
                 </td>
             </tr>
-            <tr ng-repeat="form in currentUserForms">
+            <tr ng-repeat="form in model.currentUserForms">
                 <td>{{form.title}}</td>
                 <td>
                     <button ng-click="deleteForm($index)" class="btn btn-danger" role="button">
