added field view on client side, applied ng-switch

--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -25,7 +25,7 @@
                 </td>
             </tr>
             <tr ng-repeat="form in model.currentUserForms">
-                <td>{{form.title}}</td>
+                <td><a href="#/form/{{form._id}}/fields">{{form.title}}</a></td>
                 <td>
                     <button ng-click="model.deleteForm(form._id)" class="btn btn-danger" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
