--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -3,121 +3,84 @@
     <li role="presentation"><a href="#/forms">Forms</a></li>
     <li role="presentation" class="active"><a href="#/fields">Fields</a></li>
 </ul>
-<form>
-    <div class="form-group">
-        <label for="fName" class="form-control-label">First Name:</label>
-        <div class="row">
-            <div class="col-sm-6">
-                <input type="text" class="form-control" id="fName" placeholder="First Name">
-            </div>
-            <div class="col-sm-6 col-sm-push-1 ">
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="lName" class="form-control-label">Last Name:</label>
-        <div class="row">
-            <div class="col-sm-6">
-                <input type="text" class="form-control" id="lName" placeholder="Last Name">
-            </div>
-            <div class="col-sm-6 col-sm-push-1 ">
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="dob" class="form-control-label">Date of Birth:</label>
-        <div class="row">
-            <div class="col-sm-6">
-                <input type="date" class="form-control" id="dob" placeholder="First Name">
-            </div>
-            <div class="col-sm-6 col-sm-push-1 ">
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="gender" class="form-control-label">Gender:</label>
-        <div class="row">
-            <div class="col-sm-6">
-                <select id="gender" class="form-control">
-                    <option>Male</option>
-                    <option>Female</option>
-                </select>
-            </div>
-            <div class="col-sm-6 col-sm-push-1">
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label>Roles:</label>
+<p></p>
+<form ng-repeat="field in model.fields">
+    <div ng-switch="field.type">
+        <div ng-switch-when="TEXT" class="form-group">
+            <label for="fName" class="form-control-label">{{field.label}}:</label>
             <div class="row">
                 <div class="col-sm-6">
-                    <div>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="option1"> Admin
-                    </label>
-                    </div>
-                    <div>
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="option1"> Student
-                        </label>
-                    </div>
-                    <div>
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="option1"> User
-                        </label>
-                    </div>
+                    <input type="text" class="form-control" id="fName" placeholder="{{field.placeholder}}">
+                </div>
+                <div class="col-sm-6 col-sm-push-1 ">
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div ng-switch-when="TEXTAREA" class="form-group">
+            <label for="textarea" class="form-control-label">{{field.label}}:</label>
+            <div class="row">
+                <div class="col-sm-6">
+                    <input type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}">
+                </div>
+                <div class="col-sm-6 col-sm-push-1 ">
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div ng-switch-when="EMAIL" class="form-group">
+            <label for="email" class="form-control-label">{{field.label}}:</label>
+            <div class="row">
+                <div class="col-sm-6">
+                    <input type="email" class="form-control" id="email" placeholder="{{field.placeholder}}">
+                </div>
+                <div class="col-sm-6 col-sm-push-1 ">
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div ng-switch-when="OPTIONS" class="form-group">
+            <label for="gender" class="form-control-label">{{field.label}}:</label>
+            <div class="row">
+                <div class="col-sm-6">
+                    <select id="gender" ng-model="selected" class="form-control" ng-options="item.value as item.label for item in field.options">
+                    </select>
                 </div>
                 <div class="col-sm-6 col-sm-push-1">
                     <a href="" class="btn btn-default" role="button">
@@ -134,57 +97,118 @@
                     </a>
                 </div>
             </div>
-    </div>
+        </div>
 
-    <div class="form-group">
-        <label>License Agreement:</label>
-        <div class="row">
-            <div class="col-sm-6">
-                <div>
-                    <label class="radio-inline"><input type="radio" name="License Agreement">Yes</label>
+        <div ng-switch-when="DATE" class="form-group">
+            <label for="date" class="form-control-label">{{field.label}}:</label>
+            <div class="row">
+                <div class="col-sm-6">
+                    <input type="date" class="form-control" id="date">
                 </div>
-                <div>
-                    <label class="radio-inline"><input type="radio" name="License Agreement">No</label>
+                <div class="col-sm-6 col-sm-push-1 ">
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    </a>
+                    <a href="" class="btn btn-default" role="button">
+                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                    </a>
                 </div>
-            </div>
-            <div class="col-sm-6 col-sm-push-1">
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </a>
-                <a href="" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                </a>
             </div>
         </div>
     </div>
 
+    <!--<div class="form-group">-->
+        <!--<label>Roles:</label>-->
+            <!--<div class="row">-->
+                <!--<div class="col-sm-6">-->
+                    <!--<div>-->
+                    <!--<label class="checkbox-inline">-->
+                        <!--<input type="checkbox" value="option1"> Admin-->
+                    <!--</label>-->
+                    <!--</div>-->
+                    <!--<div>-->
+                        <!--<label class="checkbox-inline">-->
+                            <!--<input type="checkbox" value="option1"> Student-->
+                        <!--</label>-->
+                    <!--</div>-->
+                    <!--<div>-->
+                        <!--<label class="checkbox-inline">-->
+                            <!--<input type="checkbox" value="option1"> User-->
+                        <!--</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-sm-6 col-sm-push-1">-->
+                    <!--<a href="" class="btn btn-default" role="button">-->
+                        <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="" class="btn btn-default" role="button">-->
+                        <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="" class="btn btn-default" role="button">-->
+                        <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="" class="btn btn-default" role="button">-->
+                        <!--<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="form-group">-->
+        <!--<label>License Agreement:</label>-->
+        <!--<div class="row">-->
+            <!--<div class="col-sm-6">-->
+                <!--<div>-->
+                    <!--<label class="radio-inline"><input type="radio" name="License Agreement">Yes</label>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<label class="radio-inline"><input type="radio" name="License Agreement">No</label>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-sm-push-1">-->
+                <!--<a href="" class="btn btn-default" role="button">-->
+                    <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
+                <!--</a>-->
+                <!--<a href="" class="btn btn-default" role="button">-->
+                    <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                <!--</a>-->
+                <!--<a href="" class="btn btn-default" role="button">-->
+                    <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                <!--</a>-->
+                <!--<a href="" class="btn btn-default" role="button">-->
+                    <!--<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+</form>
     <hr>
     <div class="form-group">
         <label for="newField" class="form-control-label">Add New Field:</label>
         <div class="row">
             <div class="col-sm-6">
-                <select id="newField" class="form-control">
-                    <option>Single Line Text</option>
-                    <option>Date</option>
-                    <option>Dropdown</option>
-                    <option>Checkboxes</option>
-                    <option>Radio buttons</option>
-                    <option>Paragraph Text Field</option>
+                <select ng-model="model.fieldType" id="newField" class="form-control">
+                    <option>Single Line Text Field</option>
+                    <option>Multi Line Text Field</option>
+                    <option>Date Field</option>
+                    <option>Dropdown Field</option>
+                    <option>Checkboxes Field</option>
+                    <option>Radio Buttons Field</option>
                 </select>
             </div>
             <div class="col-sm-6 col-sm-push-1">
-                <a href="" class="btn btn-default" role="button">
+                <a ng-click="model.addField(model.fieldType)" href="" class="btn btn-default" role="button">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </a>
             </div>
         </div>
     </div>
-</form>
+
 
 
