added multipleline, data, dropdown popups

--- a/public/assignment/client/views/forms/multipleLinePop.view.html
+++ b/public/assignment/client/views/forms/multipleLinePop.view.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3>Single Line Field</h3>
+    <h3>Multiple Line Field</h3>
 </div>
 <div class="modal-body">
     <div class="form-group">
@@ -12,12 +12,12 @@
     </div>
 </div>
 <div class="modal-footer">
-        <div class="form-inline">
-            <div class="col-md-6 col-sm-6 col-xs-6">
-                <button class="btn btn-info btn-block" ng-click="model.close()">Close</button>
-            </div>
-            <div class="col-md-6 col-sm-6 col-xs-6">
-                <button class="btn btn-info btn-block" ng-click="">Ok</button>
-            </div>
+    <div class="form-inline">
+        <div class="col-md-6 col-sm-6 col-xs-6">
+            <button class="btn btn-info btn-block" ng-click="model.close()">Close</button>
         </div>
+        <div class="col-md-6 col-sm-6 col-xs-6">
+            <button class="btn btn-info btn-block" ng-click="">Ok</button>
+        </div>
+    </div>
 </div>
