--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -19,7 +19,7 @@
                         <input type="text" class="form-control" id="fName" placeholder="{{field.placeholder}}">
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
-                        <a ng-click="model.open()" class="btn btn-default" role="button">
+                        <a ng-click="model.openSingleLine()" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
@@ -42,7 +42,7 @@
                         <input type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}">
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
-                        <a href="" class="btn btn-default" role="button">
+                        <a ng-click="model.openMultiLine()" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
@@ -89,7 +89,7 @@
                         </select>
                     </div>
                     <div class="col-sm-6 col-sm-push-1">
-                        <a href="" class="btn btn-default" role="button">
+                        <a ng-click="model.openDropDownPop()" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
@@ -112,7 +112,7 @@
                         <input type="date" class="form-control" id="date">
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
-                        <a href="" class="btn btn-default" role="button">
+                        <a ng-click="model.openDate()" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
