search bar now is hidden on sm and xs screen

--- a/public/project/client/views/main/home.view.html
+++ b/public/project/client/views/main/home.view.html
@@ -11,7 +11,7 @@
             <label for="city">In:</label>
             <select ng-model="doctor.location" class="form-control" id="city">
                 <option value="ma-boston">Boston</option>
-                <option value="ny-newyork">New York</option>
+                <option value="ca-berkeley">Berkeley</option>
             </select>
         </div>
         <div ng-show="main.illegal" class="alert alert-danger alert-dismissible" role="alert">
