--- a/public/project/client/views/search/result.view.html
+++ b/public/project/client/views/search/result.view.html
@@ -1,5 +1,5 @@
 <!--search bar-->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default col-md-12 col-lg-12 hidden-sm hidden-xs">
     <form class="navbar-form navbar-left">
         <div class="form-group">
             <!--<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{model.specialty}}<span class="caret"></span></a>-->
