implement register on server side

--- a/public/project/client/views/users/register.view.html
+++ b/public/project/client/views/users/register.view.html
@@ -3,21 +3,21 @@
 <div class="col-md-6">
     <div class="form-group">
         <label for="email">Email:</label>
-        <input class="form-control" type="text" id="email" placeholder="Emial">
+        <input ng-model="newuser.email" class="form-control" type="text" id="email" placeholder="Emial">
     </div>
     <div class="form-group">
         <label for="username">Username:</label>
-        <input class="form-control" type="text" id="username" placeholder="username">
+        <input ng-model="newuser.username" class="form-control" type="text" id="username" placeholder="username">
     </div>
     <div class="form-group">
         <label for="password">Create a password:</label>
-        <input class="form-control" type="password" id="password" placeholder="password">
+        <input ng-model="newuser.password" class="form-control" type="password" id="password" placeholder="password">
     </div>
     <div class="form-group">
         <label for="confirmPassword">Confirm your password:</label>
         <input class="form-control" type="password" id="confirmPassword" placeholder="password">
     </div>
     <div>
-        <button class="btn btn-primary btn-block">Join</button>
+        <button ng-click="model.register(newuser)" class="btn btn-primary btn-block">Join</button>
     </div>
 </div>
