implemented rate doctor on server side

--- a/public/project/client/views/rate/rate.view.html
+++ b/public/project/client/views/rate/rate.view.html
@@ -61,7 +61,7 @@
         <a ng-click="model.submit(rate)" class="btn btn-success btn-block" role="button">Submit</a>
     </div>
     <div class="col-md-3 ">
-        <a class="btn btn-warning btn-block" role="button">Cancel</a>
+        <a ng-click="model.cancel(rate)" class="btn btn-warning btn-block" role="button">Cancel</a>
     </div>
 </div>
 
