implemented send and delete message on servier side

--- a/public/project/client/views/messages/message.view.html
+++ b/public/project/client/views/messages/message.view.html
@@ -33,7 +33,7 @@
                 <td>{{message.content}}</td>
                 <td>
                     <button ng-click="model.reply(message)" class="btn btn-info" role="button">Reply</button>
-                    <button ng-click="model.deleteMsg($index)" class="btn btn-danger" role="button">Delete</button>
+                    <button ng-click="model.deleteMsg(message)" class="btn btn-danger" role="button">Delete</button>
                 </td>
             </tr>
             </tbody>
