refactor update form, on both client and server side, added data into mongodb

--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -16,10 +16,10 @@
             <tr>
                 <td><input ng-model="model.newForm.title" type="text" class="form-control" placeholder="title"></td>
                 <td>
-                    <button ng-click="model.addForm(model.newForm) " class="btn btn-primary" role="button">
+                    <button ng-click="model.createForm(model.newForm) " class="btn btn-primary" role="button">
                         <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
                     </button>
-                    <button ng-click="updateForm(model.newForm)" class="btn btn-success" role="button">
+                    <button ng-click="model.updateForm(model.newForm)" class="btn btn-success" role="button">
                         <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
                     </button>
                 </td>
