--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -40,7 +40,7 @@
                 <label for="textarea" class="form-control-label">{{field.label}}:</label>
                 <div class="row">
                     <div class="col-sm-6">
-                        <input type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}">
+                        <textarea type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}" rows="4"></textarea>
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
                         <a ng-click="model.openMultiLine(field)" class="btn btn-default" role="button">
