added phone number in profile page

--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -22,6 +22,10 @@
             <label for="password">Password:</label>
             <input ng-model="model.currentUser.password" class="form-control" type="text" id="password" placeholder="password">
         </div>
+        <div class="form-group">
+            <label for="phone">phone:</label>
+            <input ng-model="model.currentUser.phone" class="form-control" type="text" id="phone" placeholder="phone number">
+        </div>
         <div class="row">
             <div class="col-md-3">
                 <a class="btn btn-success btn-block" ng-click="model.updateProfile()">Save</a>
