project: added patient reviews section in doctor search detail view, imported new plugin

--- a/public/project/client/views/rate/rate.view.html
+++ b/public/project/client/views/rate/rate.view.html
@@ -21,31 +21,31 @@
         <div class="form-group">
             <label for="overallRating">Overall Rating:</label>
             <select ng-model="rate.overall" class="form-control" placeholder="rate" id="overallRating">
-                <option>1 star</option>
-                <option>2 star</option>
-                <option>3 star</option>
-                <option>4 star</option>
-                <option>5 star</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
             </select>
         </div>
         <div class="form-group">
             <label for="waitTime">Wait Time:</label>
             <select ng-model="rate.waitTime" class="form-control" placeholder="rate" id="waitTime">
-                <option>1 star</option>
-                <option>2 star</option>
-                <option>3 star</option>
-                <option>4 star</option>
-                <option>5 star</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
             </select>
         </div>
         <div class="form-group">
             <label for="bedsideManner">Bedside Manner:</label>
             <select ng-model="rate.bedsideManner" class="form-control" placeholder="rate" id="bedsideManner">
-                <option>1 star</option>
-                <option>2 star</option>
-                <option>3 star</option>
-                <option>4 star</option>
-                <option>5 star</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
             </select>
         </div>
     </div>
@@ -64,8 +64,7 @@
         <a ng-click="model.cancel(rate)" class="btn btn-warning btn-block" role="button">Cancel</a>
     </div>
 </div>
-
-
+<hr>
 
 
 
